--- a/ImageApp/MainWindow.xaml
+++ b/ImageApp/MainWindow.xaml
@@ -7,6 +7,6 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="350" Width="525">
     <Grid>
-        
+        <Button Height="50" VerticalAlignment="Top" Content="Download images" Command="{Binding DownloadImagesCommand}"/>
     </Grid>
 </Window>
